PR-[FV-7]-update

--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,9 @@
     body{
       margin: 0px;
     }
+    html {
+    overflow: hidden;
+}
   </style>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
